<resources>
    <string name="app_name">Chanting Counter</string>
    <string name="action_record">Records</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Namo Ksitigarbha</string>
    <string name="next">Next</string>
    <string name="ksitigarbha">Namo Ksitigarbha</string>

    <string name="filename_count" translatable="false">count.dat</string>
    <string name="filename_list" translatable="false">list.dat</string>
    <string name="end">End</string>
    <string name="fragment_item_label">Records</string>
    <string name="wood_fish">Wooden knocker</string>
    <string name="button_reset">Save Reset</string>
    <string name="filename_config" translatable="false">config.json</string>
    <string name="lucky_number" translatable="false">8888</string>
    <string name="menu_copy_title">Copy title</string>
    <string name="menu_bring_front">Fetch record</string>
    <string name="confirm_text">Confirm</string>
    <string name="cancel_text">Cancel</string>
    <string name="amitabha">Namo Amitabha</string>
    <string name="confirm_delete">Confirm to delete</string>
    <string name="msg_count_is_zero">Counter is zero , would not be put into list!</string>
    <string name="msg_settting_title">Set title to</string>
    <string name="msg_sure_to_record_than_reset">Are you sure to save then reset counter?</string>
    <string name="msg_list_too_long_will_merge">List too long! The bottom 2 lines will be merged</string>
    <string name="msg_already_on_top">Put the record on top of list</string>
    <string name="msg_count_number_not_zero">Cannot override nonzero counter</string>
    <string name="backup_to_disk">Backup to file</string>
    <string name="restore_backup">Restore from file</string>
    <string name="backup_override_confirm">Sure to override records with this</string>
    <string name="reading_error_msg">File reading error!</string>
    <string name="dark_background">Dark background</string>

</resources>