<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.tomorrow_eyes.buddhacount.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_record"
        app:showAsAction="never" />
    <item
        android:id="@+id/backup_to_disk"
        android:title="@string/backup_to_disk"
        android:visible="false" />
    <item
        android:id="@+id/restore_backup"
        android:title="@string/restore_backup"
        android:visible="false" />
    <item
        android:id="@+id/sound_switch"
        android:checkable="true"
        android:checked="true"
        android:orderInCategory="103"
        android:title="@string/wood_fish" />
    <item
        android:id="@+id/dark_background"
        android:visible="false"
        android:checkable="true"
        android:checked="false"
        android:orderInCategory="104"
        android:title="@string/dark_background" />
    <item
        android:id="@+id/item_leave"
        android:orderInCategory="105"
        android:title="@string/end" />
</menu>